==============
lxml changelog
==============

2.3 (under development)
=======================

Features added
--------------

* Enable path caching in ElementPath (``el.find*()``) to avoid parsing
  overhead.

* Setting the value of a namespaced attribute always uses a prefixed
  namespace instead of the default namespace even if both declare the
  same namespace URI.  This avoids serialisation problems when an
  attribute from a default namespace is set on an element from a
  different namespace.

* XSLT extension elements: support for XSLT context nodes other than
  elements: document root, comments, processing instructions.

* Support for strings (in addition to Elements) in node-sets returned
  by extension functions.

* Forms that lack an ``action`` attribute default to the base URL of
  the document on submit.

* XPath attribute result strings have an ``attrname`` property.

* Namespace URIs get validated against RFC 3986 at the API level
  (required by the XML namespace specification).

* Target parsers show their target object in the ``.target`` property
  (compatible with ElementTree).

* XSLT objects now take XPath object as __call__ stylesheet parameters

* ISO-Schematron support based on the de-facto Schematron reference
  'skeleton implementation'

Bugs fixed
----------

* Support recent versions of html5lib by not requiring its
  ``XHTMLParser`` in ``htmlparser.py`` anymore.

* Invalid XML text characters were not rejected by the API when they
  appeared in unicode strings directly after non-ASCII characters.

* ``lxml.cssselect`` did not distinguish between ``x[attr="val"]`` and
  ``x [attr="val"]`` (with a space).  The latter now matches the
  attribute independent of the element.

* Rewriting multiple links inside of HTML text content could end up
  replacing unrelated content as replacements could impact the
  reported position of subsequent matches.  Modifications are now
  simplified by letting the ``iterlinks()`` generator in ``lxml.html``