@@ -12,30 +12,40 @@ cdef class XSLTExtension:
         content.  To this end, the `input_node` provides read-only
         access to the current node in the input document, and the
         `self_node` points to the extension element in the stylesheet.
+
+        Note that the `output_parent` parameter may be `None` if there
+        is no parent element in the current context (e.g. no content
+        was added to the output tree yet).
         """
         pass
 
-    def apply_templates(self, _XSLTContext context not None, node):
-        u"""apply_templates(self, context, node)
+    def apply_templates(self, _XSLTContext context not None, node, output_parent=None):
+        u"""apply_templates(self, context, node, output_parent=None)
 
         Call this method to retrieve the result of applying templates
         to an element.
 
         The return value is a list of elements or text strings that
         were generated by the XSLT processor.
+
+        If you pass an Element as `output_parent` parameter, the result
+        will instead be appended to the element (including attributes
+        etc.) and the return value will be `None`.  This is a safe way
+        to generate content into the output document directly, without
+        having to take care of special values like text or attributes.
         """
         cdef xmlNode* c_parent
         cdef xmlNode* c_node
-        cdef xmlNode* c_next
         cdef xmlNode* c_context_node
-        cdef _ReadOnlyProxy proxy
-        cdef list results
         c_context_node = _roNodeOf(node)
         #assert c_context_node.doc is context._xsltContext.node.doc, \
         #    "switching input documents during transformation is not currently supported"
 
-        c_parent = tree.xmlNewDocNode(
-            context._xsltCtxt.output, NULL, "fake-parent", NULL)
+        if output_parent is not None:
+            c_parent = _nonRoNodeOf(output_parent)
+        else:
+            c_parent = tree.xmlNewDocNode(
+                context._xsltCtxt.output, NULL, "fake-parent", NULL)
 
         c_node = context._xsltCtxt.insert
         context._xsltCtxt.insert = c_parent
@@ -43,27 +53,79 @@ cdef class XSLTExtension:
             context._xsltCtxt, c_context_node, NULL)
         context._xsltCtxt.insert = c_node
 
-        results = [] # or maybe _collectAttributes(c_parent, 2) ?
-        c_node = c_parent.children
+        if output_parent is not None:
+            return None
+
         try:
-            while c_node is not NULL:
-                c_next = c_node.next
-                if c_node.type == tree.XML_TEXT_NODE:
-                    results.append(funicode(c_node.content))
-                elif c_node.type == tree.XML_ELEMENT_NODE:
-                    proxy = _newReadOnlyProxy(
-                        context._extension_element_proxy, c_node)
-                    results.append(proxy)
-                    # unlink node and make sure it will be freed later on
-                    tree.xmlUnlinkNode(c_node)
-                    proxy.free_after_use()
-                else:
-                    raise TypeError, \
-                        u"unsupported XSLT result type: %d" % c_node.type
-                c_node = c_next
+            return self._collectXSLTResultContent(context, c_parent)
         finally:
             # free all intermediate nodes that will not be freed by proxies
             tree.xmlFreeNode(c_parent)
+
+    def process_children(self, _XSLTContext context not None, output_parent=None):
+        u"""process_children(self, context, output_parent=None)
+
+        Call this method to process the XSLT content of the extension
+        element itself.
+
+        The return value is a list of elements or text strings that
+        were generated by the XSLT processor.
+
+        If you pass an Element as `output_parent` parameter, the result
+        will instead be appended to the element (including attributes
+        etc.) and the return value will be `None`.  This is a safe way
+        to generate content into the output document directly, without
+        having to take care of special values like text or attributes.
+        """
+        cdef xmlNode* c_parent
+        cdef xslt.xsltTransformContext* c_ctxt = context._xsltCtxt
+        cdef xmlNode* c_old_output_parent = c_ctxt.insert
+
+        # output_parent node is used for adding results instead of
+        # elements list used in apply_templates, that's easier and allows to
+        # use attributes added to extension element with <xsl:attribute>.
+
+        if output_parent is not None:
+            c_parent = _nonRoNodeOf(output_parent)
+        else:
+            c_parent = tree.xmlNewDocNode(
+                context._xsltCtxt.output, NULL, "fake-parent", NULL)
+
+        c_ctxt.insert = _nonRoNodeOf(output_parent)
+        xslt.xsltApplyOneTemplate(c_ctxt,
+            c_ctxt.node, c_ctxt.inst.children, NULL, NULL)
+        c_ctxt.insert = c_old_output_parent
+
+        if output_parent is not None:
+            return None
+
+        try:
+            return self._collectXSLTResultContent(context, c_parent)
+        finally:
+            # free all intermediate nodes that will not be freed by proxies
+            tree.xmlFreeNode(c_parent)
+
+    cdef _collectXSLTResultContent(self, _XSLTContext context, xmlNode* c_parent):
+        cdef xmlNode* c_node
+        cdef xmlNode* c_next
+        cdef _ReadOnlyProxy proxy
+        cdef list results = [] # or maybe _collectAttributes(c_parent, 2) ?
+        c_node = c_parent.children
+        while c_node is not NULL:
+            c_next = c_node.next
+            if c_node.type == tree.XML_TEXT_NODE:
+                results.append(funicode(c_node.content))
+            elif c_node.type == tree.XML_ELEMENT_NODE:
+                proxy = _newReadOnlyProxy(
+                    context._extension_element_proxy, c_node)
+                results.append(proxy)
+                # unlink node and make sure it will be freed later on
+                tree.xmlUnlinkNode(c_node)
+                proxy.free_after_use()
+            else:
+                raise TypeError, \
+                    u"unsupported XSLT result type: %d" % c_node.type
+            c_node = c_next
         return results
 
 
@@ -82,7 +144,8 @@ cdef void _callExtensionElement(xslt.xsltTransformContext* c_ctxt,
     cdef python.PyObject* dict_result
     cdef char* c_uri
     cdef xmlNode* c_node
-    cdef _ReadOnlyProxy context_node = None, self_node = None, output_parent
+    cdef _ReadOnlyProxy context_node = None, self_node = None
+    cdef object output_parent # not restricted to ro-nodes
     c_uri = _getNs(c_inst_node)
     if c_uri is NULL:
         # not allowed, and should never happen
@@ -103,7 +166,11 @@ cdef void _callExtensionElement(xslt.xsltTransformContext* c_ctxt,
             try:
                 # build the context proxy nodes
                 self_node = _newReadOnlyProxy(None, c_inst_node)
-                output_parent = _newAppendOnlyProxy(self_node, c_ctxt.insert)
+                if _isElement(c_ctxt.insert):
+                    output_parent = _newAppendOnlyProxy(self_node, c_ctxt.insert)
+                else:
+                    # may be the document node or other stuff
+                    output_parent = _newOpaqueAppendOnlyNodeWrapper(c_ctxt.insert)
                 if c_context_node.type in (tree.XML_DOCUMENT_NODE,
                                            tree.XML_HTML_DOCUMENT_NODE):
                     c_node = tree.xmlDocGetRootElement(<xmlDoc*>c_context_node)
